Criação de teste para a classe UserController, endpoint findAll implementado